changed how server works

--- a/201802/01/MN/package.json
+++ b/201802/01/MN/package.json
@@ -2,12 +2,13 @@
   "name": "docker_web_app",
   "version": "1.0.0",
   "description": "Node.js on Docker",
-  "author": "Tanoja Sunkam <sunk1343@stthomas.edu>, Liz Farinha-Guevara <fari5273@stthomas.edu>", 
+  "author": "Tanoja Sunkam <sunk1343@stthomas.edu>, Liz Farinha-Guevara <fari5273@stthomas.edu>",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.16.1"
+  "dependencies": {},
+  "devDependencies": {
+    "express": "^4.16.3"
   }
 }
